fixed padding for nav bar on mobile devices

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -308,6 +308,7 @@ footer {
 @media screen and (max-width: 575px){
     nav ul li a {
         font-size: 15px;
+        padding: 10px;
         width: 100%;
         justify-content: center;
     }
